[[bin]]
name = "mpm2"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap_3 = { package = "clap", version = "3", features = ["derive"] }
clap = { workspace = true, features = ["derive"] }
itertools = { workspace = true }
once_cell = { workspace = true }
bcs-ext = { workspace = true }
datatest-stable = { git = "https://github.com/starcoinorg/diem-devtools", branch = "feature/pub-test-opts" }
move-binary-format = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-cli = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-command-line-common = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-compiler = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-core-types = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-package = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-vm-runtime = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-vm-test-utils = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }

starcoin-account-provider = { workspace = true }
starcoin-cmd = { workspace = true }
starcoin-config = { workspace = true }
starcoin-crypto = { workspace = true }
starcoin-rpc-client = { workspace = true }
starcoin-types = { workspace = true }
starcoin-logger = { workspace = true }
starcoin-vm-types = { workspace = true }
vm-status-translator = { workspace = true }

# extra dependences
codespan-reporting = { workspace = true }

starcoin-vm2-framework = { features = ["testing"], workspace = true }
starcoin-vm2-types = { workspace = true }
starcoin-vm2-vm-types = { workspace = true }
starcoin-vm2-move-compiler = { workspace = true }
starcoin-vm2-gas-schedule = { workspace = true }
starcoin-vm2-transactional-test-harness = { workspace = true }
starcoin-vm2-vm-runtime = { features = ["testing"], workspace = true }

[dev-dependencies]

[package]
authors = { workspace = true }
description = "CLI frontend for the Move compiler and VM"
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
name = "move-package-manager2"
publish = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }
