[package]
name = "starcoin-test-helper"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
bcs-ext = { workspace = true }
stest = { workspace = true }
starcoin-config = { workspace = true }
starcoin-genesis = { workspace = true }
starcoin-vm2-vm-types = { workspace = true }
starcoin-vm2-types = { workspace = true }
starcoin-vm2-executor = { workspace = true }
starcoin-vm2-statedb = { workspace = true }
starcoin-vm2-framework = { workspace = true }
starcoin-vm2-state-api = { workspace = true }
starcoin-vm2-move-compiler = { workspace = true }
starcoin-transaction-builder = { workspace = true }
starcoin-crypto = { workspace = true }
starcoin-cached-packages = { path = "../framework/cached-packages" }

[dev-dependencies]
starcoin-logger = { workspace = true }
starcoin-vm-runtime = { path = "../vm-runtime" }
