[package]
name = "lambda-boogie-handler"
authors = ["Asymptotic <info@asymptotic.tech>"]
license = "Apache-2.0"
publish = false
edition = "2021"
version = "0.0.1"

[lints]
workspace = true

[[bin]]
name = "lambda-handler"
path = "lambda.rs"

[dependencies]
anyhow = "1.0.71"
lambda_runtime = "0.14.4"
sha2 = "0.10.9"
tokio = { version = "1.43.0", features = ["full"] }
tempfile = "3.3.0"
serde = { version = "1.0.144", features = ["derive"] }
redis = { version = "0.32.5", features = ["tls-rustls-insecure", "tokio-rustls-comp"] }
rustls = { version = "0.23.31", features = ["ring"] }
serde_json = "1.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.20"
dotenv = "0.15.0"
nix = { version = "0.30.1", features = ["process"] }
libc = "0.2.176"
