[package]
name = "move-prover-boogie-backend"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Move prover Boogie backend"
license = "Apache-2.0"
publish = false
edition = "2021"

[lints]
workspace = true

[dependencies]
simplelog.workspace = true
clap.workspace = true
toml.workspace = true
async-trait.workspace = true
bimap.workspace = true
num.workspace = true
itertools.workspace = true
log.workspace = true
serde.workspace = true
anyhow.workspace = true
once_cell.workspace = true
pretty.workspace = true
regex.workspace = true
rand.workspace = true
futures.workspace = true
tera.workspace = true
tokio.workspace = true
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
codespan.workspace = true
codespan-reporting.workspace = true

move-stackless-bytecode.workspace = true
move-command-line-common.workspace = true
move-compiler.workspace = true
move-model.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
move-docgen.workspace = true
wait-timeout = "0.2.1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }
