[dependencies]
starcoin-gas-schedule = { path = "../gas-schedule" }
clap = { workspace = true }
move-binary-format = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-core-types = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-stdlib = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-table-extension = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-vm-types = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
starcoin-logger = { workspace = true }
starcoin-gas-algebra = { path = "../gas-algebra" }

[package]
authors = { workspace = true }
description = "starcoin Move VM starcoin-gas-meter"
edition = { workspace = true }
license = { workspace = true }
name = "starcoin-gas-meter"
publish = { workspace = true }
version = "2.0.1"
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[features]
testing = []
