[dependencies]
either = { workspace = true }
move-core-types = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-binary-format = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-table-extension = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-vm-types = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-vm-test-utils = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
serde = { workspace = true }
paste = "1.0"
starcoin-gas-algebra = { path = "../gas-algebra" }
once_cell = { workspace = true }


[package]
authors = { workspace = true }
description = "starcoin-gas-schedule"
edition = { workspace = true }
license = { workspace = true }
name = "starcoin-gas-schedule"
publish = { workspace = true }
version = "2.0.1"
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[features]
default = []